# starbaby

./: .gitignore  README.md
StarBabyROS/: .gitignore
StarBabyROS/src/: .rosinstall
StarBabyROS/src/starbaby/: CMakeLists.txt  package.xml  setup.py
StarBabyROS/src/starbaby_base_controler/: CMakeLists.txt  package.xml  setup.py
StarBabyROS/src/starbaby_base_controler/launch/: base_controler.launch
StarBabyROS/src/starbaby_base_controler/scripts/: base_controler_with_odom.py
StarBabyROS/src/starbaby_base_controller/: CMakeLists.txt  package.xml  setup.py
StarBabyROS/src/starbaby_calibrate/: CMakeLists.txt  README.md  package.xml  setup.py
StarBabyROS/src/starbaby_calibrate/action/: Calibrate.action
StarBabyROS/src/starbaby_calibrate/launch/: starbaby_calibrate.launch
StarBabyROS/src/starbaby_calibrate/scripts/calibrate/: calibrate.py
StarBabyROS/src/starbaby_control/: CMakeLists.txt  package.xml
StarBabyROS/src/starbaby_description/: CMakeLists.txt  package.xml
StarBabyROS/src/starbaby_gazebo/: CMakeLists.txt  package.xml
StarBabyROS/src/starbaby_imu/: CMakeLists.txt  README.md  package.xml  setup.py
StarBabyROS/src/starbaby_launcher/: CMakeLists.txt  README.md  package.xml  setup.py
StarBabyROS/src/starbaby_launcher/action/: Launcher.action
StarBabyROS/src/starbaby_launcher/launch/: starbaby_launcher.launch
StarBabyROS/src/starbaby_launcher/scripts/launcher/: .launcher.py.swp  launcher.py
StarBabyROS/src/starbaby_led_matrix/: CMakeLists.txt  package.xml  setup.py
StarBabyROS/src/starbaby_localization/: CMakeLists.txt  package.xml
StarBabyROS/src/starbaby_navigation/: CMakeLists.txt  package.xml
StarBabyROS/src/starbaby_sensor/: CMakeLists.txt  package.xml
StarBabyROS/src/starbaby_state/: CMakeLists.txt  package.xml
StarBabyROS/src/starbaby_teleop/: CMakeLists.txt  package.xml
StarBabyROS/src/starbaby_trilateration/: CMakeLists.txt  package.xml
StarBabyService/: install.sh  starbaby.service  start.sh  stop.sh
(+47 files in other folders)
