<?xml version="1.0"?>
<package format="2">
  <name>starbaby_base_controler</name>
  <version>0.0.1</version>
  <description>Arduino motorboard hardware interface, robot base controler and odometry</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="julienbayle@github.com">Julien BAYLE</maintainer>
  <author email="ulienbayle@github.com">Julien BAYLE</author>

  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pid</exec_depend>
  <exec_depend>rosserial_arduino</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
 
  <export>
  </export>
</package>
