<?xml version="1.0"?>
<package format="2">
  <name>starbaby_launcher</name>
  <version>0.0.1</version>
  <description>Launcher action and rosserial for the sensorboard</description>
  <maintainer email="julienbayle@github.com">Julien BAYLE</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib_msgs</depend>
  
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
